--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^2.7.2"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "emotion": "^9.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
